--- a/Flash Chat iOS13/GoogleService-Info.plist
+++ b/Flash Chat iOS13/GoogleService-Info.plist
@@ -6,8 +6,6 @@
 	<string>340852356854-v5otiedn8h1aad9fvejrs62uekkqepfq.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.340852356854-v5otiedn8h1aad9fvejrs62uekkqepfq</string>
-	<key>API_KEY</key>
-	<string>AIzaSyAIHvjZ9eLUJHirMPGWLouP3MbkUoW6NGk</string>
 	<key>GCM_SENDER_ID</key>
 	<string>340852356854</string>
 	<key>PLIST_VERSION</key>
@@ -19,15 +17,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>flash-chat-ios-49d23.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:340852356854:ios:571deb7c8d37b6a9419ed7</string>
 </dict>
